# CodingGarden-ECS-RoomEscape

./: .gitignore  CMakeLists.txt  Makefile  README.md
CMake/: CppLint.cmake
include/game/: control.h  math-utils.h  status.h  window.h
include/game/components/: coin_component.h  coins_component.h  collider_component.h  combat_component.h  damage_component.h  door_component.h  enimy_component.h  health_component.h  menu_component.h  movement_component.h  obstacle_component.h  player_coins_component.h  player_component.h  player_control_component.h  player_health_component.h  room_component.h  room_size_component.h  save_step_component.h  steps_component.h  texture_component.h  transform_component.h
include/game/scenes/: death_scene.h  endgame_scene.h  game_scene.h  menu_scene.h  zero_steps_scene.h
include/game/system/: collision_system.h  combat_control_system.h  cross_room_system.h  death_system.h  endgame_system.h  enemy_collision_system.h  enemy_death_system.h  enemy_movement_system.h  game_coin_system.h  game_door_system.h  game_enemy_system.h  game_menu_system.h  game_room_system.h  movement_control_system.h  obstacles_control_system.h  render_symbols_system.h  render_system.h  save_system.h  zero_steps_system.h
include/lib/ecs/: component.h  engine.h  entity.h  entity_manager.h  system.h  system_manager.h
include/lib/math/: vec2.h
include/lib/scenes/: context.h  i_scene.h  scene_manager.h
lib/BearLibTerminal/include/: BearLibTerminal.h
misc/cpplint/: cpplint.py
src/game/: main.cpp  math-utils.cpp
src/game/scenes/: death_scene.cpp  endgame_scene.cpp  game_scene.cpp  menu_scene.cpp  zero_steps_scene.cpp
src/game/systems/: collision_system.cpp  combat_control_system.cpp  cross_room_system.cpp  death_system.cpp  endgame_system.cpp  game_coin_system.cpp  (+12 more)
